Added gradle build script to repository

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,22 @@ bin/
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
+### Gradle template
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
 # Sensitive or high-churn files:
 .idea/dataSources.ids
 .idea/dataSources.xml
