--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ bin/
 .project
 .idea
 *.iml
-resultfile.json
+*resultfile.json
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
