--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 // Include dependent libraries in archive.
-mainClassName = 'io.riddles.matchwrapper.MatchWrapper'
+mainClassName = 'io.riddles.gamewrapper.GameWrapper'
 
 sourceCompatibility = 1.8
 version = '1.2.9'
